packages/typ/tests/fixtures/diagnostics/0597_functor_opaque_result_annotation_mismatch_05.ml.expected
File "0597_functor_opaque_result_annotation_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0597_functor_opaque_result_annotation_mismatch_05 is not a valid module name.

File "0597_functor_opaque_result_annotation_mismatch_05.ml", line 20, characters 14-27:
20 | let _ : int = Out_epsilon.y
                   ^^^^^^^^^^^^^
Error: The value Out_epsilon.y has type
         Out_epsilon.u = Make_epsilon(Input_epsilon).u
       but an expression was expected of type int
